[metadata]
name = aadhar_pan_name_matcher
version = 0.0.1
author = Mayur Rajendra Fegde
author_email = mayur.fegde@stockants.com
description = Python packages for Aadhar card and Pan card name matcher.
long_description = file:README.md
url = https://github.com/StockAnts/aadhar-pan-name-matcher.git
classifiers =
	Development Status :: 5 - Development/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Archiving :: Packaging
	Topic :: System :: Systems Administration
	Topic :: Utilities

[options]
include_package_data = True
package= find:
python_requires = >=3.8





