[metadata]
name = aadhar_pan_name_matcher
version = 0.0.1
author = Mayur Rajendra Fegde
author_email = mayur.fegde@stockants.com
description = Python packages for Aadhar card and Pan card name matcher.
long_description = file:README.md
url = https://github.com/StockAnts/aadhar-pan-name-matcher.git
classifiers =
	Development Status :: Development/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages= find:
python_requires = >=3.1





